hphp/test/zend/good/ext/ldap/tests/ldap_sasl_bind_basic.php.skipif
<?hh require_once('skipif.inc');
if (!function_exists("ldap_sasl_bind")) die("skip LDAP extension not compiled with SASL support");
require "connect.inc";
	$link = fsockopen($host, $port);
	if (!$link) {
		die("skip no server listening");
	}
